Fixed list names overflowing only on very long words

--- a/src/components/List/styles.scss
+++ b/src/components/List/styles.scss
@@ -67,6 +67,7 @@
       -webkit-line-clamp: 2;
       -webkit-box-orient: vertical;
       text-overflow: ellipsis;
+      word-break: break-all;
     }
 
     &__date {
